agregar nuevos archivos

--- a/integrantes.html
+++ b/integrantes.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100&display=swap" rel="stylesheet">
@@ -13,26 +12,62 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gravitas+One&family=Quicksand:wght@300;400&display=swap"
         rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="estilos/style.css">
+
     <title>shinee world ☆ integrantes</title>
 </head>
 
 <body>
     <header>
-        <input type="checkbox" name="nav-btn" id="nav-btn" />
-        <span></span>
-    <nav>
-        <ul>
 
-            <li><a href="index.html"> home </a></li>
-            <li><a href="integrantes.html"> integrantes</a></li>
-            <li><a href="shinee.html"> shinee </a></li>
-            <li><a href="contacto.html"> contacto </a>
-            <li><a href="galeria.html"> galeria </a>
+        <a name="home" id="home"></a>
 
-        </ul>
+        <div class="hamburguesa">
 
-    </nav>
-</header>
+            <div class="collapse" id="navbarToggleExternalContent">
+                <div class="bg-dark p-4">
+                    <h5 class="text-white h4">menu</h5>
+                    <span class="text-muted">
+                        <nav>
+                            <ul>
+                                <li><a href="index.html"> home </a></li>
+                                <li><a href="integrantes.html"> integrantes</a></li>
+                                <li><a href="shinee.html"> shinee </a></li>
+                                <li><a href="contacto.html"> contacto </a>
+                                <li><a href="galeria.html"> galeria </a>
+                            </ul>
+                    </nav></span>
+                </div>
+            </div>
+            <nav class="navbar navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+            </nav>
+</div>
+
+
+<div class="navescritorio">
+            <nav>
+                <ul>
+                    <li><a href="index.html"> home </a></li>
+                    <li><a href="integrantes.html"> integrantes</a></li>
+                    <li><a href="shinee.html"> shinee </a></li>
+                    <li><a href="contacto.html"> contacto </a>
+                    <li><a href="galeria.html"> galeria </a>
+                </ul>
+            </nav>
+</div>
+
+
+
+    </header>
 
 
     <div class="bannerintegrantes">
@@ -50,7 +85,7 @@
 
     </div>
 
-<main>
+    <main>
 
         <div id="onew">
             <h2>lee jinki</h2>
@@ -78,125 +113,130 @@
 
 
 
-            <div id="jonghyun">
-                <h2>kim jonghyun</h2>
+        <div id="jonghyun">
+            <h2>kim jonghyun</h2>
 
 
-                <p> <strong>Kim Jonghyun nació el 8 de abril de 1990 en Hyehwa-dong</strong>, en la ciudad de Seúl,
-                    Corea del Sur, <strong>era el
-                        vocalista principal del grupo</strong> y a su vez, compositor, presentador de radio y MC. Fue
-                    trainer durante 3 años antes de
-                    debutar tan solo a los 18 años y cautivar a todos con su voz. <br />
-                    Quienes tienen a Jonghyun como integrante favorito del grupo, se autodenominan blinger, esto gracias
-                    a la
-                    canción “The SHINee World”.
-                </p>
-                <p><strong>Jonghyun fue un DJ activo en su programa de radio de "Blue Night” por tres años, desde el 3
-                        de abril del 2014
-                        hasta abril de 2017</strong>, en el cual se comunicaba con los escuchas con su voz sincera, adás
-                    de que utilizaba este
-                    medio como manera de sobrellevar el insomnio. <br />
-                    <strong>Debutó como solista el 12 de enero del 2015 con el mini álbum titulado 'BASE', con el single
-                        principal de
-                        “Guilty Pleasure”.</strong>
-                </p>
-                <p>Lamentablente, <strong>Jonghyun sufrió por muchos años depresión, esto lo llevo a recurrir al
-                        suicidio el 18 de
-                        dicibre de 2017 mediante la inhalacion de monoxido de carbono.</strong> Sin duda su muerte fue
-                    un golpe bajo para la
-                    industria y los idols, marcando lo importante que es la salud mental y lo poco cuidada que está por
-                    quienes forman parte
-                    de la misma.</p>
-                <p><strong>Jonghyun había preparado antes de marcharse un álbum, el cual se llama “Poet |
-                        Artist”</strong> con el single
-                    principal denominado “Shinin’”. Gracias a este nombre <strong>nace “The Shiny Foundation“,
-                        organización que la familia de
-                        Jonghyun llevó a cabo en su nombre con la idea de ayudar a jóvenes en su carrera artística tanto
-                        como él hubiera
-                        querido seguir en vida.</strong></p>
-            </div>
-
-
-            <div id="key">
-                <h2>kim kibum</h2>
-                <p><strong> Kim Kibum, mejor conocido como Key nació el 23 Septibre de 1991 en Daegu</strong>, Corea del
-                    Sur, <strong>es el vocalista y
-                        rapero el grupo</strong>, adás de ser actor y modelo; a la vez al igual que Onew, se unió a la
-                    presa en 2006.
-                    En 2012 debutó como actor de musical en la producción coreana del musical de Broadway Catch Me If
-                    You Can"",
-                    y como actor de novelas en el drama de tv Drinking Solo"".</p>
-                <p><strong>Key cuenta con un dúo llamado “ToHeart”, aunque ya está disuelto</strong>, conformado por
-                    Hyun de INFINITE, otro grupo de la
-                    segunda generación del kpop. Debutó en 2014 bajo el single con el mismo nombre del grupo. <br />
-                    En 2018 finalmente debutó como solista con su álbum denominado “Face”, el 26 de novibre. Un año más
-                    tarde
-                    realizó su primer concierto en solitario en SMTOWN COEX Artium en Seúl.</p>
-                <p><strong>En 2019 realizó y finalizó el servicio militar un año más tarde por lo que tuvo que darle una
-                        pausa a sus
-                        actividades.</strong></p>
-            </div>
-
-            <div id="minho">
-                <h2>choi minho</h2>
-                <p><strong>Choi Minho nació el 9 de dicibre de 1991 en la provincia de Incheon</strong>, Corea del Sur y
-                    <strong>adás de ser el
-                        rapero principal del grupo es MC, actor y modelo de reconocido prestigio.</strong> <br />
-                    A diferencia del resto de los integrantes,<strong> Minho viene de una familia reconocida, su padre
-                        es un
-                        ex-futbolista y entrenador de la liga K Daejun de fútbol por lo que la fama ya era algo
-                        cotidiano para él.</strong> Adás de
-                    prestarse como modelo en determinados desfiles desde los 15 años.
-                </p>
-                <p>Minho destaca por su increíble capacidad física para distintos deportes, un gran ejplo de esto son
-                    los
-                    “Idol Star Athletic Championship”, actividades que se realizan todos los años en el mundo del kpop
-                    parecidas a los
-                    Juegos Olímpicos.
-                </p>
-                <p><strong>También desde ya unos años que se dedica en exclusiva a la actuación</strong>, haciendo
-                    apariciones en numerosas
-                    películas y dramas, como son “Hwarang: The Poet Warrior Youth”, “The Battle of Jangsari”y “The
-                    Fabulous”. <br />
-                    <strong>Debutó como solista el 28 de marzo de 2019 con una canción llamada "I’m Home”</strong> el
-                    cual es un ta R&B habla
-                    sobre querer ser animado en la soledad del día a día. <br />
-                    <strong>En 2019 realizó y finalizó el servicio militar un año más tarde destacando en el cuerpo de
-                        marina.</strong>
-                </p>
-            </div>
-
-            <div id="taemin">
-                <h2>lee taemin</h2>
-
-
-                <p><strong>Lee Taemin nació el 18 Julio de 1993, en Dongbong-gu</strong> en la ciudad de Seúl, Corea del
-                    Sur, <strong>es el integrante
-                        más chico del grupo y el bailarín principal.</strong> <br />
-                    A los 14 años fue elegido por la SM Entertaeminment y fue el último en ingresar al grupo en 2008.
-                    El 18 de agosto de 2014 <strong>fue el primer integrante en debutar como solista con su álbum “ACE”
-                        con el single
-                        principal de “Danger”.</strong> A su vez, años más tarde, <strong>en 2016 también debutó en
-                        Japón con el álbum “Sayonara Hitori”.</strong>
-                    T aemin es quien mayor cantidad de álbumes y conciertos en solitario tiene. El último en salir fue
-                    “Advice“ a
-                    comienzo de este año. </p>
-                <p>Dato importante a revelar, <strong>taemin es uno de los mejores bailarines de la generación</strong>,
-                    siendo modelo a seguir
-                    de los nuevos idols, rompiendo varios records de ser el primer idol mas joven en presentarse en el
-                    estadio Nippon Budokan,
-                    también tiene el titulo de “Legendary Solo Man” gracias a la cantidad de venta de sus discos y es
-                    ganador de
-                    varios prios coreanos. <br />
-                    <strong>Actualmente taemin se encuentra realizando el servicio militar desde el 31 de mayo, se
-                        espera su regreso sea
-                        en 2024.</strong>
-                </p>
+            <p> <strong>Kim Jonghyun nació el 8 de abril de 1990 en Hyehwa-dong</strong>, en la ciudad de Seúl,
+                Corea del Sur, <strong>era el
+                    vocalista principal del grupo</strong> y a su vez, compositor, presentador de radio y MC. Fue
+                trainer durante 3 años antes de
+                debutar tan solo a los 18 años y cautivar a todos con su voz. <br />
+                Quienes tienen a Jonghyun como integrante favorito del grupo, se autodenominan blinger, esto gracias
+                a la
+                canción “The SHINee World”.
+            </p>
+            <p><strong>Jonghyun fue un DJ activo en su programa de radio de "Blue Night” por tres años, desde el 3
+                    de abril del 2014
+                    hasta abril de 2017</strong>, en el cual se comunicaba con los escuchas con su voz sincera, adás
+                de que utilizaba este
+                medio como manera de sobrellevar el insomnio. <br />
+                <strong>Debutó como solista el 12 de enero del 2015 con el mini álbum titulado 'BASE', con el single
+                    principal de
+                    “Guilty Pleasure”.</strong>
+            </p>
+            <p>Lamentablente, <strong>Jonghyun sufrió por muchos años depresión, esto lo llevo a recurrir al
+                    suicidio el 18 de
+                    dicibre de 2017 mediante la inhalacion de monoxido de carbono.</strong> Sin duda su muerte fue
+                un golpe bajo para la
+                industria y los idols, marcando lo importante que es la salud mental y lo poco cuidada que está por
+                quienes forman parte
+                de la misma.</p>
+            <p><strong>Jonghyun había preparado antes de marcharse un álbum, el cual se llama “Poet |
+                    Artist”</strong> con el single
+                principal denominado “Shinin’”. Gracias a este nombre <strong>nace “The Shiny Foundation“,
+                    organización que la familia de
+                    Jonghyun llevó a cabo en su nombre con la idea de ayudar a jóvenes en su carrera artística tanto
+                    como él hubiera
+                    querido seguir en vida.</strong></p>
         </div>
-    
+
+
+        <div id="key">
+            <h2>kim kibum</h2>
+            <p><strong> Kim Kibum, mejor conocido como Key nació el 23 Septibre de 1991 en Daegu</strong>, Corea del
+                Sur, <strong>es el vocalista y
+                    rapero el grupo</strong>, adás de ser actor y modelo; a la vez al igual que Onew, se unió a la
+                presa en 2006.
+                En 2012 debutó como actor de musical en la producción coreana del musical de Broadway Catch Me If
+                You Can"",
+                y como actor de novelas en el drama de tv Drinking Solo"".</p>
+            <p><strong>Key cuenta con un dúo llamado “ToHeart”, aunque ya está disuelto</strong>, conformado por
+                Hyun de INFINITE, otro grupo de la
+                segunda generación del kpop. Debutó en 2014 bajo el single con el mismo nombre del grupo. <br />
+                En 2018 finalmente debutó como solista con su álbum denominado “Face”, el 26 de novibre. Un año más
+                tarde
+                realizó su primer concierto en solitario en SMTOWN COEX Artium en Seúl.</p>
+            <p><strong>En 2019 realizó y finalizó el servicio militar un año más tarde por lo que tuvo que darle una
+                    pausa a sus
+                    actividades.</strong></p>
+        </div>
+
+        <div id="minho">
+            <h2>choi minho</h2>
+            <p><strong>Choi Minho nació el 9 de dicibre de 1991 en la provincia de Incheon</strong>, Corea del Sur y
+                <strong>adás de ser el
+                    rapero principal del grupo es MC, actor y modelo de reconocido prestigio.</strong> <br />
+                A diferencia del resto de los integrantes,<strong> Minho viene de una familia reconocida, su padre
+                    es un
+                    ex-futbolista y entrenador de la liga K Daejun de fútbol por lo que la fama ya era algo
+                    cotidiano para él.</strong> Adás de
+                prestarse como modelo en determinados desfiles desde los 15 años.
+            </p>
+            <p>Minho destaca por su increíble capacidad física para distintos deportes, un gran ejplo de esto son
+                los
+                “Idol Star Athletic Championship”, actividades que se realizan todos los años en el mundo del kpop
+                parecidas a los
+                Juegos Olímpicos.
+            </p>
+            <p><strong>También desde ya unos años que se dedica en exclusiva a la actuación</strong>, haciendo
+                apariciones en numerosas
+                películas y dramas, como son “Hwarang: The Poet Warrior Youth”, “The Battle of Jangsari”y “The
+                Fabulous”. <br />
+                <strong>Debutó como solista el 28 de marzo de 2019 con una canción llamada "I’m Home”</strong> el
+                cual es un ta R&B habla
+                sobre querer ser animado en la soledad del día a día. <br />
+                <strong>En 2019 realizó y finalizó el servicio militar un año más tarde destacando en el cuerpo de
+                    marina.</strong>
+            </p>
+        </div>
+
+        <div id="taemin">
+            <h2>lee taemin</h2>
+
+
+            <p><strong>Lee Taemin nació el 18 Julio de 1993, en Dongbong-gu</strong> en la ciudad de Seúl, Corea del
+                Sur, <strong>es el integrante
+                    más chico del grupo y el bailarín principal.</strong> <br />
+                A los 14 años fue elegido por la SM Entertaeminment y fue el último en ingresar al grupo en 2008.
+                El 18 de agosto de 2014 <strong>fue el primer integrante en debutar como solista con su álbum “ACE”
+                    con el single
+                    principal de “Danger”.</strong> A su vez, años más tarde, <strong>en 2016 también debutó en
+                    Japón con el álbum “Sayonara Hitori”.</strong>
+                T aemin es quien mayor cantidad de álbumes y conciertos en solitario tiene. El último en salir fue
+                “Advice“ a
+                comienzo de este año. </p>
+            <p>Dato importante a revelar, <strong>taemin es uno de los mejores bailarines de la generación</strong>,
+                siendo modelo a seguir
+                de los nuevos idols, rompiendo varios records de ser el primer idol mas joven en presentarse en el
+                estadio Nippon Budokan,
+                también tiene el titulo de “Legendary Solo Man” gracias a la cantidad de venta de sus discos y es
+                ganador de
+                varios prios coreanos. <br />
+                <strong>Actualmente taemin se encuentra realizando el servicio militar desde el 31 de mayo, se
+                    espera su regreso sea
+                    en 2024.</strong>
+            </p>
+        </div>
+
     </main>
 
-    
+</div>
+<a href="#home" class="boton"> </a>
+
+</div>
+
+
     <footer>
 
         <p>todos los derechos reservados</p>
@@ -212,9 +252,16 @@
         <a href="https://www.instagram.com/shinee/">
             <img src="https://img.icons8.com/sf-regular-filled/48/FFFFFF/instagram-new.png" />
         </a>
+
+        <p>seguinos en nuestras redes!</p>
+
     </footer>
 
     </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 
 
 </body>
