--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100&display=swap" rel="stylesheet">
@@ -13,27 +12,67 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gravitas+One&family=Quicksand:wght@300;400&display=swap"
         rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="estilos/style.css">
+
     <title>shinee world ☆ contacto</title>
 </head>
 
 <body>
 
     <header>
-        <input type="checkbox" name="nav-btn" id="nav-btn" />
-        <span></span>
-    <nav>
-        <ul>
 
-            <li><a href="index.html"> home </a></li>
-            <li><a href="integrantes.html"> integrantes</a></li>
-            <li><a href="shinee.html"> shinee </a></li>
-            <li><a href="contacto.html"> contacto </a>
-            <li><a href="galeria.html"> galeria </a>
 
-        </ul>
+        <a name="home" id="home"></a>
+        
+        <div class="hamburguesa">
 
-    </nav>
-</header>
+            <div class="collapse" id="navbarToggleExternalContent">
+                <div class="bg-dark p-4">
+                    <h5 class="text-white h4">menu</h5>
+                    <span class="text-muted">
+                        <nav>
+                            <ul>
+                                <li><a href="index.html"> home </a></li>
+                                <li><a href="integrantes.html"> integrantes</a></li>
+                                <li><a href="shinee.html"> shinee </a></li>
+                                <li><a href="contacto.html"> contacto </a>
+                                <li><a href="galeria.html"> galeria </a>
+                            </ul>
+                    </nav></span>
+                </div>
+            </div>
+            <nav class="navbar navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+            </nav>
+</div>
+
+
+<div class="navescritorio">
+            <nav>
+                <ul>
+
+                    <li><a href="index.html"> home </a></li>
+                    <li><a href="integrantes.html"> integrantes</a></li>
+                    <li><a href="shinee.html"> shinee </a></li>
+                    <li><a href="contacto.html"> contacto </a>
+                    <li><a href="galeria.html"> galeria </a>
+
+                </ul>
+            </nav>
+</div>
+
+
+
+
+    </header>
 
     <div class="bannerconcurso">
 
@@ -68,6 +107,7 @@
 
 
         <main>
+
             <div class="contenedor">
                 <form action="action" class="form">
                     <div class="form-header">
@@ -98,7 +138,10 @@
 
 
 
+    </div>
+    <a href="#home" class="boton"> </a>
 
+    </div>
 
 
 
@@ -120,7 +163,16 @@
         <a href="https://www.instagram.com/shinee/">
             <img src="https://img.icons8.com/sf-regular-filled/48/FFFFFF/instagram-new.png" />
         </a>
+
+        <p>seguinos en nuestras redes!</p>
+
     </footer>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
 
 </body>
 
