--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100&display=swap" rel="stylesheet">
@@ -15,68 +15,132 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gravitas+One&family=Quicksand:wght@300;400&display=swap"
-        rel="stylesheet"
-    href="https://raw.github.com/daneden/animate.css/master/animate.css">
+        rel="stylesheet" href="https://raw.github.com/daneden/animate.css/master/animate.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>shinee world</title>
 </head>
 
 <body>
 
-<Header>
+    <Header>
 
-    <div id="grillaindex">
+        <div id="grillaindex">
 
-        <div id="home"> 
-        <input type="checkbox" name="nav-btn" id="nav-btn" />
-    <span></span>
-            <nav>
-                <ul>
+            <a name="home" id="home"></a>
 
-                    <li><a href="#home"> home </a></li>
-                    <li><a href="integrantes.html"> integrantes</a></li>
-                    <li><a href="shinee.html"> shinee </a></li>
-                    <li><a href="contacto.html"> contacto </a>
-                    <li><a href="galeria.html"> galeria </a>
+            <div id="home">
 
-                </ul>
+                <div class="hamburguesa">
 
-            </nav>
+                    <div class="collapse" id="navbarToggleExternalContent">
+                        <div class="bg-dark p-4">
+                            <h5 class="text-white h4">menu</h5>
+                            <span class="text-muted">
+                                <nav>
+                                    <ul>
+                                        <li><a href="#home"> home </a></li>
+                                        <li><a href="integrantes.html"> integrantes</a></li>
+                                        <li><a href="shinee.html"> shinee </a></li>
+                                        <li><a href="contacto.html"> contacto </a>
+                                        <li><a href="galeria.html"> galeria </a>
+                                    </ul>
+                                </nav>
+                            </span>
+                        </div>
+                    </div>
+                    <nav class="navbar navbar-dark bg-dark">
+                        <div class="container-fluid">
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarToggleExternalContent"
+                                aria-controls="navbarToggleExternalContent" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                        </div>
+                    </nav>
+                </div>
 
-</Header>
+                <div class="navescritorio">
+                    <nav>
+                        <ul>
 
-        <div class="banner">
+                            <li><a href="#home"> home </a></li>
+                            <li><a href="integrantes.html"> integrantes</a></li>
+                            <li><a href="shinee.html"> shinee </a></li>
+                            <li><a href="contacto.html"> contacto </a>
+                            <li><a href="galeria.html"> galeria </a>
 
-            <div class="imgfondo">
-                <img src="./imagenes/shinee/banner.jpg" alt="foto grupal de shinee">
-            </div>
+                        </ul>
+                    </nav>
+                </div>
 
-            <h1> welcome to <span id="shineeworld"> <br> SHINee <br> World</span></h1>
+            
+    </Header>
+
+    <div class="banner">
+
+        <div class="imgfondo">
+            <img src="./imagenes/shinee/banner.jpg" alt="foto grupal de shinee">
         </div>
 
-        <main class="mainindex">
-            <h2>conoce a shinee</h2>
-            <p>Les presento a SHINee, <strong>grupo integrado por Lee Jinki, Kim Jonghyun, Kim Kibum, Choi Minho y Lee
-                    Taemin</strong>,
-                en pocas palabras, por cinco estrellas con el título de ser los príncipes del Kpop, revolucionando y
-                estableciendo estándares desde el 2008 que siguen vigentes hasta la fecha. Bajo la firma de SM
-                Entertainment,<strong> es uno de los primeros grupos de la segunda generación del kpop, que desde su
-                    debut
-                    con
-                    “Replay” el 25 de mayo del 2008</strong>, alcanzó la fama con rapidez. Hoy en día no solo el grupo
-                sigue
-                activo
-                siendo ya su aniversario número 14, sino que de manera individual siguen sus proyectos al pie de la
-                letra.
-            </p>
-            <p>
-                Sin duda, son un ejplo a seguir y modelo de muchos idols de la tercera y naciente cuarta generación
-                del Kpop, no solo por su arte sino por los momentos que afrontaron y los mantiene estables hasta hoy.
-            </p>
-
-
+        <h1> welcome to <span id="shineeworld"> <br> SHINee <br> World</span></h1>
     </div>
-    </main>
 
+    <main class="mainindex">
+        <section>
+            <h2 class="display-4 text-center mt-3"> conoce a shinee </h2>
+        </section>
+        <section class="containerfluid">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <p>Les presento a SHINee, <strong>grupo integrado por Lee Jinki, Kim Jonghyun, Kim Kibum, Choi Minho
+                            y
+                            Lee
+                            Taemin</strong>,
+                        en pocas palabras, por cinco estrellas con el título de ser los príncipes del Kpop,
+                        revolucionando y
+                        estableciendo estándares desde el 2008 que siguen vigentes hasta la fecha. Bajo la firma de SM
+                        Entertainment,<strong> es uno de los primeros grupos de la segunda generación del kpop, que
+                            desde su
+                            debut
+                            con
+                            “Replay” el 25 de mayo del 2008</strong>, alcanzó la fama con rapidez. Hoy en día no solo el
+                        grupo
+                        sigue
+                        activo
+                        siendo ya su aniversario número 14, sino que de manera individual siguen sus proyectos al pie de
+                        la
+                        letra.
+                    </p>
+                    <p>
+                        Sin duda, son un ejplo a seguir y modelo de muchos idols de la tercera y naciente cuarta
+                        generación
+                        del Kpop, no solo por su arte sino por los momentos que afrontaron y los mantiene estables hasta
+                        hoy.
+                    </p>
+                </div>
+
+
+
+
+                <div class="col-lg-8 col-md-6 col-sm-12">
+                    <div class="video">
+                        <iframe class="iframe" width="560" height="315" src="https://www.youtube.com/embed/nchkAmc49p4"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+
+        </section>
+
+</div>
+        <a href="#home" class="boton"> </a>
+
+        </div>
+    </main>
 
 
     <footer>
@@ -94,9 +158,17 @@
         <a href="https://www.instagram.com/shinee/">
             <img src="https://img.icons8.com/sf-regular-filled/48/FFFFFF/instagram-new.png" />
         </a>
+
+        <p>seguinos en nuestras redes!</p>
+
     </footer>
 
 
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 </body>
 
