agregar mas scss

--- a/galeria.html
+++ b/galeria.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina de galeria con imagenes de los integrantes de SHINee">
+    <meta name="keywords" content="SHINee, Jonghyun, Key, Taemin, Minho, SM Entertaeminment, K-POP, Musica, Baile">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100&display=swap" rel="stylesheet">
@@ -80,7 +82,7 @@
     <div class="bannergaleria">
 
         <div class="contenedor">
-            <img src="imagenes/shinee/galeria.jpg" alt="Foro grupal de SHINee" />
+            <img src="imagenes/shinee/galeria.jpg" alt="Foro grupal de SHINee banner" />
         </div>
 
 
@@ -106,16 +108,16 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="imagenes/galeria/1.jpg" class="d-block w-100" alt="...">
+                        <img src="imagenes/galeria/1.jpg" class="d-block w-100" alt="foto grupal de shinee de 2009">
                     </div>
                     <div class="carousel-item">
-                        <img src="imagenes/galeria/2.jpg" class="d-block w-100" alt="...">
+                        <img src="imagenes/galeria/2.jpg" class="d-block w-100" alt="foto grupal de shinee era twtd">
                     </div>
                     <div class="carousel-item">
-                        <img src="imagenes/galeria/3.jpg" class="d-block w-100" alt="...">
+                        <img src="imagenes/galeria/3.jpg" class="d-block w-100" alt="foto grupal shinee 1of1 era">
                     </div>
                     <div class="carousel-item">
-                        <img src="imagenes/galeria/4.jpg" class="d-block w-100" alt="...">
+                        <img src="imagenes/galeria/4.jpg" class="d-block w-100" alt="foto grupal de shinee 1of1 era">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
