--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina de contacto de SHINee hecha por fans para fans">
+    <meta name="keywords" content="SHINee, Jonghyun, Key, Taemin, Minho, SM Entertaeminment, K-POP, Musica, Baile">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100&display=swap" rel="stylesheet">
