--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="description" content="Pagina inicio dedicada a SHINee de fans para fans">
+    <meta name="keywords" content="SHINee, Jonghyun, Key, Taemin, Minho, SM Entertaeminment, K-POP, Musica, Baile">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100&display=swap" rel="stylesheet">
@@ -31,11 +32,12 @@
             <a name="home" id="home"></a>
 
             <div id="home">
+                
 
                 <div class="hamburguesa">
 
                     <div class="collapse" id="navbarToggleExternalContent">
-                        <div class="bg-dark p-4">
+                        <div class="color bg-dark p-4">
                             <h5 class="text-white h4">menu</h5>
                             <span class="text-muted">
                                 <nav>
@@ -50,7 +52,7 @@
                             </span>
                         </div>
                     </div>
-                    <nav class="navbar navbar-dark bg-dark">
+                    <nav class="color navbar navbar-dark bg-dark">
                         <div class="container-fluid">
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarToggleExternalContent"
@@ -124,7 +126,6 @@
 
 
 
-
                 <div class="col-lg-8 col-md-6 col-sm-12">
                     <div class="video">
                         <iframe class="iframe" width="560" height="315" src="https://www.youtube.com/embed/nchkAmc49p4"
@@ -162,7 +163,6 @@
         <p>seguinos en nuestras redes!</p>
 
     </footer>
-
 
 
 
