--- a/shinee.html
+++ b/shinee.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina de informacion sobre el grupo SHINee">
+    <meta name="keywords" content="SHINee, Jonghyun, Key, Taemin, Minho, SM Entertaeminment, K-POP, Musica, Baile">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100&display=swap" rel="stylesheet">
@@ -76,7 +78,7 @@
     <div class="bannershinee">
 
         <div class="contenedor">
-            <img src="imagenes/shinee/shinee.jpg" alt="aDsdsn " />
+            <img src="imagenes/shinee/shinee.jpg" alt="Foto banner grupal shinee" />
 
 
             <div class="cajainfoshinee">
