agregado de correccion

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         letra.
                     </p>
                     <p>
-                        Sin duda, son un ejplo a seguir y modelo de muchos idols de la tercera y naciente cuarta
+                        Sin duda, son un ejemplo a seguir y modelo de muchos idols de la tercera y naciente cuarta
                         generación
                         del Kpop, no solo por su arte sino por los momentos que afrontaron y los mantiene estables hasta
                         hoy.
